
find_package(CBLAS)
if (CBLAS_FOUND)
  include_directories(${CBLAS_INCLUDES} ${PROJECT_SOURCE_DIR}/libs/f77)
  btl_add_bench(btl_cblas main.cpp)
  if(BUILD_btl_cblas)
    target_link_libraries(btl_cblas ${CBLAS_LIBRARIES})
    set_target_properties(btl_cblas PROPERTIES COMPILE_FLAGS "-DCBLASNAME=ATLAS")
  endif(BUILD_btl_cblas)
endif (CBLAS_FOUND)

find_package(MKL)
if (MKL_FOUND)
  include_directories(${MKL_INCLUDES} ${PROJECT_SOURCE_DIR}/libs/f77)
  btl_add_bench(btl_mkl main.cpp)
  if(BUILD_btl_mkl)
    target_link_libraries(btl_mkl ${MKL_LIBRARIES})
    set_target_properties(btl_mkl PROPERTIES COMPILE_FLAGS "-DCBLASNAME=INTEL_MKL")
  endif(BUILD_btl_mkl)
endif (MKL_FOUND)
