
find_package(ATLAS)
if (ATLAS_FOUND)
  include_directories(${ATLAS_INCLUDES} ${PROJECT_SOURCE_DIR}/libs/f77)
  btl_add_bench(btl_atlas main.cpp)
  if(BUILD_btl_atlas)
    target_link_libraries(btl_atlas ${ATLAS_LIBRARIES})
    set_target_properties(btl_atlas PROPERTIES COMPILE_FLAGS "-DCBLASNAME=ATLAS -DHAS_LAPACK=1")
  endif(BUILD_btl_atlas)
endif (ATLAS_FOUND)

find_package(MKL)
if (MKL_FOUND)
  include_directories(${MKL_INCLUDES} ${PROJECT_SOURCE_DIR}/libs/f77)
  btl_add_bench(btl_mkl main.cpp)
  if(BUILD_btl_mkl)
    target_link_libraries(btl_mkl ${MKL_LIBRARIES})
    set_target_properties(btl_mkl PROPERTIES COMPILE_FLAGS "-DCBLASNAME=INTEL_MKL -DHAS_LAPACK=1")
  endif(BUILD_btl_mkl)
endif (MKL_FOUND)
