# $Id: Makefile.am,v 1.18 2004/07/03 15:32:19 opetzold Exp $

libtvmetincludedir = $(includedir)/$(PACKAGE)/xpr

libtvmetinclude_HEADERS = \
	BinOperator.h \
	Eval.h \
	Identity.h \
	Literal.h \
	MatrixBinaryFunctions.h \
	MatrixFunctions.h \
	Matrix.h \
	MatrixRow.h \
	MatrixCol.h \
	MatrixDiag.h \
	MatrixOperators.h \
	MatrixTranspose.h \
	MatrixUnaryFunctions.h \
	MMProduct.h \
	MMProductTransposed.h \
	MMtProduct.h \
	MtMProduct.h \
	MVProduct.h \
	MtVProduct.h \
	Null.h \
	UnOperator.h \
	VectorBinaryFunctions.h \
	VectorFunctions.h \
	Vector.h \
	VectorOperators.h \
	VectorUnaryFunctions.h
